--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="max-w-3xl mx-auto px-4 py-12">
         <!-- Header -->
         <header class="text-center mb-12">
-            <h1 class="text-4xl font-normal crimson mb-4">Noah Dasanaike</h1>
+            <h1 class="text-4xl font-normal crimson mb-4">David Struhs</h1>
             <div class="mb-4 text-lg">
-                Ph.D. Candidate, Carl J. Friedrich Fellow<br>
-                Department of Government, Harvard University
+                Ph.D. Student<br>
+                Graduate School of Education, Harvard University
             </div>
             <div class="text-lg">
-                <a href="mailto:noahdasanaike@g.harvard.edu" class="crimson hover:opacity-80">noahdasanaike@g.harvard.edu</a>
+                <a href="mailto:david_struhs@fas.harvard.edu" class="crimson hover:opacity-80">david_struhs@fas.harvard.edu</a>
                 <span class="mx-2">—</span>
                 <a href="cv/dasanaike_cv.pdf" class="crimson hover:opacity-80">Curriculum Vitae</a>
             </div>
@@ -43,31 +43,15 @@
         <!-- Profile Image and Bio -->
         <div class="flex gap-8 mb-16">
             <div class="w-32">
-                <img src="pics/third.jpg" alt="Noah Dasanaike" class="w-full">
+                <img src="pics/third.jpg" alt="David Struhs" class="w-full">
             </div>
             <div class="flex-1">
                 <p class="mb-6">
-                    I'm a third-year PhD candidate and the Carl J. Friedrich Fellow in the Department of Government at Harvard University.
+                    I'm a second-year PhD student at the Harvard Graduate School of Education.
                 </p>
                 <p>
-                    I'm primarily interested in structuralist approaches to political behavior and institutions, with a focus on their geographical variation. I'm also interested in large-scale measurement and computation.
+                   HOLD: Research Interests
                 </p>
-            </div>
-        </div>
-
-        <!-- Publications -->
-        <h2 class="text-2xl mb-6">Publications</h2>
-        <div class="space-y-8">
-            <div>
-                <p class="mb-1">Ekiert, Grzegorz and Noah Dasanaike. (2024). "The Return of Dictatorship." <em>Journal of Democracy</em>.</p>
-                <div class="space-x-4">
-                    <a href="https://muse.jhu.edu/article/937742" class="crimson hover:opacity-80">[published article]</a>
-                    <a href="https://ces.fas.harvard.edu/uploads/files/Open-Forum-Papers/Open-Forum-2024-Ekiert-Dasanaike.pdf" class="crimson hover:opacity-80">[full working paper]</a>
-                </div>
-            </div>
-            <div>
-                <p class="mb-1">Dasanaike, Noah. (2021). "Businessperson Deputies and Party Cohesion: Evidence from the Russian State Duma." <em>Party Politics</em>.</p>
-                <a href="research/dasanaike_2021_duma.pdf" class="crimson hover:opacity-80">[published article]</a>
             </div>
         </div>
 
