--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,53 +9,51 @@
         body {
             color: #1a1a1a;
             line-height: 1.6;
+            background-color: #f9fafb; /* Lighter background for a clean look */
         }
-        .crimson {
-            color: #A51C30;
+        .highlight {
+            color: #A51C30; /* Crimson color for highlights */
         }
-        .top-line {
-            height: 1px;
+        .separator-line {
+            height: 2px; /* Slightly thicker line for a distinct separation */
             background-color: #A51C30;
             margin: 2rem 0;
-            opacity: 0.8;
+            opacity: 0.9; /* Slightly more opaque */
         }
     </style>
 </head>
-<body class="bg-white">
-    <div class="max-w-3xl mx-auto px-4 py-12">
+<body>
+    <div class="max-w-2xl mx-auto px-4 py-8">
         <!-- Header -->
         <header class="text-center mb-12">
-            <h1 class="text-4xl font-normal crimson mb-4">David Struhs</h1>
-            <div class="mb-4 text-lg">
-                Ph.D. Student<br>
-                Graduate School of Education, Harvard University
+            <h1 class="text-5xl font-semibold highlight mb-4">David A. Struhs</h1>
+            <div class="mb-4 text-xl">
+                PhD Student and PIER Fellow<br>
+                Harvard Graduate School of Education
             </div>
             <div class="text-lg">
-                <a href="mailto:david_struhs@fas.harvard.edu" class="crimson hover:opacity-80">david_struhs@fas.harvard.edu</a>
+                <a href="mailto:david_struhs@fas.harvard.edu" class="highlight hover:opacity-80">david_struhs@fas.harvard.edu</a>
                 <span class="mx-2">—</span>
-                <a href="cv/dasanaike_cv.pdf" class="crimson hover:opacity-80">Curriculum Vitae</a>
+                <a href="cv/struhsd_cv.pdf" class="highlight hover:opacity-80">Curriculum Vitae</a>
             </div>
         </header>
 
-        <div class="top-line"></div>
+        <div class="separator-line"></div>
 
         <!-- Profile Image and Bio -->
         <div class="flex gap-8 mb-16">
             <div class="w-32">
-                <img src="pics/third.jpg" alt="David Struhs" class="w-full">
+                <img src="pics/das_3.jpg" alt="David A. Struhs" class="w-full rounded-lg shadow-md">
             </div>
             <div class="flex-1">
-                <p class="mb-6">
-                    I'm a second-year PhD student at the Harvard Graduate School of Education.
-                </p>
                 <p>
-                   HOLD: Research Interests
+                    I study the economics of education with a focus on U.S. K-12 education policy. My particular interests are on school choice, K-12 governance, and accountability. I am also interested in the politics of education.
                 </p>
             </div>
         </div>
 
         <!-- Footer -->
-        <footer class="text-center text-gray-600 mt-16">
+        <footer class="text-center text-gray-500 mt-16">
             Last updated August 2024
         </footer>
     </div>
